[package]
name = "server_impl_rocket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.136", features = ["derive"]}
rusqlite = {version = "0.26.3", features = ["bundled"]}
rocket_contrib = {version = "0.4.10", features = ["json"]}
serde_json = "1.0.78"